# fjalar_firmware

./: .gitignore  .gitmodules  README.md  schema.proto  schema_generate.sh
.west/: config
application/: west.yml
application/common/: CMakeLists.txt  Kconfig
application/common/minmea/: CMakeLists.txt  (+3 more)
application/flight_controller/: CMakeLists.txt  Kconfig  preferences.conf  prj.conf  testcase.yaml
application/flight_controller/boards/: fjalar.conf  fjalar.overlay  native_posix_64.conf  native_posix_64.overlay  native_sim.conf  native_sim_64.conf  native_sim_64.overlay
application/flight_controller/boards/arm/fjalar/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  fjalar.dts  fjalar.dtsi  fjalar.yaml  fjalar_defconfig
application/flight_controller/boards/arm/fjalar/support/: openocd.cfg
application/flight_controller/lib/: CMakeLists.txt
application/flight_controller/lib/pla/: CMakeLists.txt  pla.h
application/flight_controller/lib/protocol/: protocol.c  protocol.h  schema.pb.c  schema.pb.h
application/flight_controller/modules/dummysensor/: CMakeLists.txt
application/flight_controller/modules/dummysensor/drivers/sensor/: CMakeLists.txt  Kconfig
application/flight_controller/modules/dummysensor/drivers/sensor/dummysensor/: CMakeLists.txt  Kconfig  dummysensor.c
application/flight_controller/modules/dummysensor/drivers/sensor/dummysensor/data/iclr/: converter.py  iclr.h
application/flight_controller/modules/dummysensor/drivers/sensor/dummysensor/data/piccard/: baro.csv  converter.py  imu.csv  piccard.h
application/flight_controller/modules/dummysensor/drivers/sensor/dummysensor/data/skyward/: baro.csv  converter.py
application/flight_controller/modules/dummysensor/dts/bindings/sensor/: aesir,dummysensor.yaml
application/flight_controller/modules/dummysensor/zephyr/: module.yml
application/flight_controller/modules/ms5611/: CMakeLists.txt
application/flight_controller/modules/ms5611/drivers/sensor/: CMakeLists.txt  Kconfig
application/flight_controller/modules/ms5611/drivers/sensor/ms5611/: CMakeLists.txt  kconfig  ms5611.c
application/flight_controller/modules/ms5611/dts/bindings/: meas,ms5611.yaml
application/flight_controller/modules/ms5611/zephyr/: module.yml
application/flight_controller/src/: actuation.c  actuation.h  ahrs.c  ahrs.h  commands.c  commands.h  communication.c  communication.h  filter.c  filter.h  fjalar.h  flight_state.c  flight_state.h  hello.cpp  hello.h  main.c  melodies.h  sensors.c  sensors.h
application/flight_controller/testing/: preferences.conf  test_main.c
application/flight_controller/zephyr/: module.yml
application/tracker/: CMakeLists.txt  Kconfig  prj.conf  west.yml
application/tracker/boards/: native_posix_64.conf  native_posix_64.overlay  t_echo.conf  t_echo.overlay
application/tracker/boards/arm/t_echo/: Kconfig  Kconfig.board  Kconfig.defconfig  t_echo-pinctrl.dtsi  t_echo.dts  t_echo.yaml  t_echo_defconfig
application/tracker/src/: communication.c  communication.h  display.c  display.h  main.c  sensors.c  sensors.h  tracker.h
dashboard/: FjalarParser.py  main.py  requirements.txt  schema_pb2.py
dashboard/utils/: widgets.py
(+6 files in other folders)
